# e-pragati

./: .gitignore  LICENSE  README.md  alembic.ini  epragati.db  fifteen5.db  pyproject.toml  requirements.txt
data/: history.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  config.ts
frontend/src/components/: AICopilot.tsx  AdvancedAnalytics.tsx  Analytics.tsx  Dashboard.tsx  History.tsx  KeywordRepetition.tsx  Performance.tsx  SemanticSimilarity.tsx  SubmitUpdate.tsx  Team.tsx  TeamOverview.tsx  TeamStructure.tsx  Updates.tsx
frontend/src/types/: feedback.ts
migrations/: env.py
scripts/: restart_backend.sh  seed_db.py
src/: config.py  database.py  init_db.py  main.py  models.py  schemas.py  seed_data.py  verify_data.py
src/routers/: analytics.py  copilot.py  performance.py
