[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "e-pragati"
version = "0.1.0"
description = "Employee Productivity Analysis Platform"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "python-dotenv",
    "openai",
    "uvicorn",
    "nltk",
    "typer"
]

[tool.hatch.build.targets.wheel]
packages = ["src"] 